test/compile-fail/resolution/use-nested-private-struct/top.rhdl
mod a {
    pub mod b {
        struct c {}
    }
}

use a::b::c;
